objects/PRMRequestQueue__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PRM Request Queue</relationshipLabel>
        <relationshipName>PRM_Request_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PRM Request Queue</relationshipLabel>
        <relationshipName>PRM_Request_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ErrorInfo__c</fullName>
        <label>ErrorInfo</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProcessingStatus__c</fullName>
        <label>Processing Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestType__c</fullName>
        <label>RequestType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>POMPPERM</fullName>
                </value>
                <value>
                    <fullName>PRTLPERM</fullName>
                </value>
                <value>
                    <fullName>UPDIDUIMS</fullName>
                </value>
                <value>
                    <fullName>UPDMEMPROP</fullName>
                </value>
                <value>
                    <fullName>ACCOUNT_TEAM</fullName>
                </value>
                <value>
                    <fullName>ACCOUNT_TEAM_MEMBER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RunCounter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Run Counter</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TargetApplication__c</fullName>
        <label>TargetApplication</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>PRM Request Queue</label>
    <nameField>
        <label>PRM Request Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PRM Request Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>